# fpco-bidding

./: README.md
contracts/bidding/: Cargo.toml
contracts/bidding/examples/: schema.rs
contracts/bidding/src/: contract.rs  error.rs  lib.rs  monotonic_id.rs  msg.rs  state.rs  tests.rs
