[package]
name = "bidding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
thiserror = "1"
schemars = "0.8.1"
cw-utils = "2.0.0"
cosmwasm-schema = "1.1.4"

[dev-dependencies]
cw-multi-test = "2.0.1"
